tests/snapshots/assets__check_file@unit-comment-comment-in-markup.typ-40.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/comment/comment-in-markup.typ
snapshot_kind: text
---
== /* 1 */ heading2 // 11

=== /* 2 */ heading3 // 22

+ /*  */ 3 // 354

- 5645
  // 454
  786756

/ asdqwer: 123hhh
/ /* 0 */ asd/* 1 */qwer: 123/* 2 */ hhh // 6453

_123/* comment */456_
_789 // comment
_
