tests/snapshots/assets__check_file@unit-comment-comment-in-params.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/comment/comment-in-params.typ
snapshot_kind: text
---
#let f(
  // aaa
  a, // bbb
) = { }

#let f(
  // aaa
  a, // bbb
) = { }

#let g = (
  // ccc
  a, //  ddd
) => { }

#let g = (
  // ccc
  a, //  ddd
) => { }

#let g = (
  a, // ccc
  //  ddd
) => { }

#let f(
  (// aaa
  a   // bbb
),
) = { }

#let g = (
  (// ccc
  a  //  ddd
),
) => { }

#let g = (
  (a// ccc
   //  ddd
),
) => { }
