tests/snapshots/assets__check_file@unit-comment-comment-in-while.typ-80.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/comment/comment-in-while.typ
snapshot_kind: text
---
#{
  while /*(condition)*/ false {
    // something
  }

  while false /*(condition)*/ { }

  while false {
    // something
  }
  while false {
    /*  111
    222   */
  } // aaaa
}
