tests/snapshots/assets__check_file@unit-comment-consecutive-comment.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/comment/consecutive-comment.typ
---
#{
  // This is a comment
  // This is another comment
  // This is a third comment
  let a = 0 // This is a fourth comment
  // This is a fourth comment
  // This is a fifth comment
  let b = 1
  // This is a sixth comment
}

#{
  let c = 0
  // end of the line
}
