tests/snapshots/assets__check_file@unit-comment-consecutive-comment.typ-40.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/comment/consecutive-comment.typ
snapshot_kind: text
---
#{
  // This is a comment
  // This is another comment
  // This is a third comment
  let a = 0 // This is a fourth comment
  // This is a fourth comment
  // This is a fifth comment
  let b = 1 // This is a sixth comment
}

#{
  let c = 0
  // end of the line
}
